- Adding JS logic and build process.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <div class="avengers__container js-main-container"></div>
+    <script src="dist/js/main.min.js"></script>
 </body>
 </html>
