WIP: Adding a preferences model to persist filtering/ordering choices.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="dist/css/main.css" media="screen" rel="stylesheet" />
 </head>
 <body>
-    <div class="avengers__container js-main-container"></div>
+    <div class="avengers__wrapper js-main-container"></div>
 
     <div class="avengers-loader js-avengers-loader">
         <div class="svg__wrapper">
