Experimenting with vendor bundles.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
     </div>
 
+    <script src="dist/js/vendor.min.js"></script>
     <script src="dist/js/main.min.js"></script>
 </body>
 </html>
